[tool.poetry]
name = "uplc"
version = "0.6.10"
description = "Python implementation of untyped plutus language core"
authors = ["nielstron <n.muendler@web.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/opshin/uplc"
keywords = ["python", "language", "programming-language", "compiler", "validator", "smart-contracts", "cardano"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "uplc"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
frozendict = "^2.3.8"
cbor2 = "^5.4.6"
frozenlist = "^1.3.3"
rply = "^0.7.8"
pycardano = "^0.11.1"
python-secp256k1-cardano = "^0.2.3"
setuptools = "^70.2.0"

[tool.poetry.group.dev.dependencies]
pyaiken = "0.5.1"
hypothesis = "^6.75.0"
parameterized = "^0.9.0"
poetry-bumpversion = "^0.3.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
coverage = "^7.2.5"
pytest = "^7.3.1"

[tool.poetry.scripts]
uplc = "uplc.__main__:main"

[tool.poetry_bumpversion.file."uplc/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
