[project]
name = "uplc"
version = "1.3.2"
description = "Python implementation of untyped plutus language core"
authors = [{ name = "nielstron", email = "n.muendler@web.de" }]
requires-python = ">=3.9, <4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "python",
    "language",
    "programming-language",
    "compiler",
    "validator",
    "smart-contracts",
    "cardano",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "frozendict>=2.3.8",
    "cbor2>=5.4.6",
    "frozenlist2>=1.0.0",
    "rply>=0.7.8",
    "pycardano>=0.9.0",
    "python-secp256k1-cardano>=0.2.4",
    "bitstring>=4.2.3",
    "pycryptodome>=3.21.0",
    "regex>=2025.9.18",
    "pynacl>=1.6.0",
    "bitarray>=3.7.2",
    "pyblst>=0.3.14",
]

[project.urls]
Repository = "https://github.com/opshin/uplc"

[project.scripts]
uplc = "uplc.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.75.0",
    "parameterized>=0.9.0",
    "poetry-bumpversion>=0.3.0",
    "pre-commit>=3.2.2",
    "black>=23.3.0",
    "coverage>=7.2.5",
    "pytest>=7.3.1",
]

[tool.hatch.build.targets.sdist]
include = ["uplc"]

[tool.hatch.build.targets.wheel]
include = ["uplc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
